feat(catalog): expiration queue configuration (#330)
* expiration interval is now configurable on warehouse level
* delete strategy (soft <-> hard) is now configurable on warehouse level
