# crates/iceberg-catalog/src/catalog/views/load.rs
@@ -70,6 +70,7 @@ pub(crate) async fn load_view<C: Catalog, A: AuthZHandler, S: SecretStore>(
         storage_profile,
         storage_secret_id,
         status,
+        tabular_delete_profile: _,
     } = C::get_warehouse(warehouse_id, transaction.transaction()).await?;
     require_active_warehouse(status)?;
 
